objects/Task_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Definition__c</fullName>
        <label>Activity Definition</label>
        <referenceTo>Activity_Definition__c</referenceTo>
        <relationshipLabel>Project Task Definitions</relationshipLabel>
        <relationshipName>Project_Task_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Time_Spent__c</fullName>
        <label>Expected Time Spent</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Activity_Name__c</fullName>
        <label>External Activity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_RMS_Activity_Code__c</fullName>
        <description>The grandparent (Milestone Definition) record&apos;s RMS Activity Code.</description>
        <formula>Activity_Definition__r.Milestone_Definition__r.RMS_Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent RMS Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Migration_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate whether the Task Definition record relates to a task that is client data conversion related. The field will be used/referenced by systems (such as RMS) as an attribute for the newly-created Project Tasks, and if the attribute value is &apos;true&apos;, and, the Project Task fails, a newly-created (clone of the original) Project Task will be generated.</description>
        <label>Is Migration Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RMS_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies whether the RMS system owns the creation and update process to any created Project Tasks referencing this definition record.</description>
        <label>Is RMS Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logical_RMS_Key__c</fullName>
        <description>The Logical (concatenated) RMS unique key for this specific Task Definition record.  It comprises a concatenated string of the Grandparent (i.e. Milestone Definition) RMS Activity Code, Parent (i.e. Activity Definition) RMS Assignment Type, and this record&apos;s RMS Task Code.  The string is concatenated using a &quot;|&quot; delimiter to combine the 3 values.</description>
        <formula>IF(ISNULL(Parent_RMS_Assignment_Type__c) || ISBLANK(Parent_RMS_Assignment_Type__c), Parent_RMS_Assignment_Type__c, Grandparent_RMS_Activity_Code__c &amp; &quot;|&quot; &amp; Parent_RMS_Assignment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logical RMS Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifyWhenComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyWhenComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_RMS_Assignment_Type__c</fullName>
        <description>The parent (Activity Definition) record&apos;s RMS Assignment Type.</description>
        <formula>Activity_Definition__r.RMS_Assignment_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent RMS Assignment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_Task_Code__c</fullName>
        <description>RMS Task Code (logically representing the RMS version of this Task Definition object)</description>
        <label>RMS Task Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Task Definition</label>
    <nameField>
        <displayFormat>TID-{000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Task Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Definition_If_Active</fullName>
        <active>true</active>
        <description>Cannot update Definition if it is active.</description>
        <errorConditionFormula>PRIORVALUE(Active__c) != false &amp;&amp; Active__c = true &amp;&amp; NOT(ISNEW())</errorConditionFormula>
        <errorMessage>This definition is active. You cannot update an active definition.</errorMessage>
    </validationRules>
</CustomObject>